@@ -9,6 +9,8 @@ texlive-bin (2025.20250727.75242+ds-5) UNRELEASED; urgency=medium
   * Enable the luajit support also on hurd-amd64.
   * Add a workaround for missing automake dependencies in single job builds.
 
+  * Implement override_dh_missing correctly.
+
  -- Debian TeX Task Force <debian-tex-maint@lists.debian.org>  Sun, 17 Aug 2025 09:38:50 +0200
 
 texlive-bin (2025.20250727.75242+ds-4) unstable; urgency=medium
